# advent-of-code-solutions

./: .gitignore  Cargo.toml  justfile  template-main.rs
advent-2021-day-1/src/: main.rs
day-1/: Cargo.toml
day-1/src/: main.rs
day-11/src/: main.rs
day-13/: Cargo.toml
day-13/src/: main.rs
day-14/src/: main.rs
day-15/: Cargo.toml
day-15/src/: main.rs
day-16/src/: main.rs
day-17/src/: main.rs
day-2/src/: main.rs
day-21/: Cargo.toml
day-21/benches/: part2.rs
day-21/src/: lib.rs  main.rs
day-22/: Cargo.toml
day-22/src/: main.rs
day-23/: Cargo.toml
day-23/src/: main.rs
day-24/: Cargo.toml
day-24/src/: main.rs
day-25/src/: main.rs
day-3/src/: main.rs
day-4/: Cargo.toml
day-4/src/: main.rs
day-5/src/: main.rs
day-6/src/: main.rs
day-7/: Cargo.toml
day-7/benches/: bench.rs
day-7/src/: main.rs
day-8/src/: main.rs
day-9/: Cargo.toml
year-2021/day-11/: Cargo.toml
year-2021/day-12/: Cargo.toml
year-2021/day-14/: test_input2.txt
year-2021/day-17/: Cargo.toml
year-2021/day-19/: Cargo.toml  invert.py
year-2021/day-2/: Cargo.toml
year-2021/day-20/: Cargo.toml
year-2021/day-23/: Cargo.toml
year-2021/day-25/: Cargo.toml
year-2021/day-3/: Cargo.toml  test_input3.txt
year-2021/day-5/: Cargo.toml
year-2021/day-7/: costs.csv
year-2021/day-8/: test_input3.txt
year-2022/: Cargo.toml
year-2022/aoc-utils/: Cargo.toml
year-2022/day-10/: Cargo.toml
year-2024/: Cargo.toml
year-2024/day-11/: Cargo.toml
year-2024/day-11/benches/: stones.rs
year-2024/day-11/src/: lib.rs  main.rs
(+91 files in other folders)
