[package]
name = "day-15"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nalgebra = "0.29.0"
ndarray = "0.15.4"
rustc-hash = "1.1.0"
